# reasoning-gym

./: .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  activate.sh  complete_setup.sh  main.py  pyproject.toml  requirements.txt  run_benchmark_parallel.slurm  run_training.slurm  setup.sh  testing.py  testing2.py  train.py  train_minimal.py  train_ultra_minimal.py
configs/: base.yaml
configs/experiments/: leg_counting_qwen7b.yaml
configs/models/: qwen-7b.yaml
configs/tasks/: leg_counting.yaml
grpo_training/: activate.sh  deepspeed_config.json  main.py  pyproject.toml  run_training.slurm  test_model_simple.py  train.py
scripts/: benchmark_models_parallel.py  check_gpus.sh  example_rename_mappings.json  generate_slurm.py  plot_benchmark.py  test_model.py  train.py
src/data/: dataset_loader.py  dataset_utils.py
src/models/: model_loader.py
src/rewards/: base_reward.py  correctness.py  registry.py
src/training/: trainer.py
src/utils/: config.py  memory_tracker.py
templates/: slurm_template.sh
